--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   json_annotation: ^4.8.1
   loading_indicator: ^3.1.1
   gap: ^3.0.1
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
