--- a/.github/workflows/deploy_web.yaml
+++ b/.github/workflows/deploy_web.yaml
@@ -4,15 +4,14 @@ on:
   push:
     branches:
       - main
-
-permissions:
-  contents: read
-  pages: write
+  # manual trigger
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v4
     - uses: subosito/flutter-action@v2
