--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = arturs_app_joke
+PRODUCT_NAME = dad_jokes
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = pl.gawronlucas.artursAppJoke
+PRODUCT_BUNDLE_IDENTIFIER = pl.gawronlucas.dadJokes
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 pl.gawronlucas. All rights reserved.
